@@ -7,5 +7,5 @@ import os
 import sys
 
 datadir = '/usr/share/schooltool-clients/sampleschool'
-sys.path.insert(0, '/usr/lib/schooltool-clients')
+sys.path.insert(0, '/usr/share/schooltool-clients')
 
